Added pending sections

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <professional-exp></professional-exp>
 <academic-details></academic-details>
 <skills></skills>
+<projects></projects>
+<social></social>
