Added scroll functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <personal-info></personal-info>
-<professional-exp></professional-exp>
-<academic-details></academic-details>
-<skills></skills>
-<projects></projects>
-<social></social>
+<professional-exp id="professional-exp"></professional-exp>
+<academic-details id="academic-details"></academic-details>
+<skills id="my-skills"></skills>
+<projects id="personal-projects"></projects>
+<social id="social-profile"></social>
