--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -12,24 +12,36 @@
   <div class="divider"></div>
 
   <div class="row-2">
-    <div matTooltip="Scroll down" [matTooltipClass]="orange" class="icon">
-      <fa-icon [icon]="faAngleDoubleDown"></fa-icon>
-    </div>
-    <div matTooltip="Professional Experience" class="icon">
-      <fa-icon [icon]="faBriefcase"></fa-icon>
-    </div>
-    <div matTooltip="Academic Details" class="icon">
-      <fa-icon [icon]="faGraduationCap"></fa-icon>
-    </div>
-    <div matTooltip="Skills and Tools" class="icon">
-      <fa-icon [icon]="faGem"></fa-icon>
-    </div>
-    <div matTooltip="Personal Projects" class="icon">
-      <fa-icon [icon]="faClipboardList"></fa-icon>
-    </div>
-    <div matTooltip="Social Media" class="icon">
-      <fa-icon [icon]="faGithub"></fa-icon>
-    </div>
+    <a href="#professional-exp">
+      <div matTooltip="Scroll down" [matTooltipClass]="orange" class="icon down-arrow">
+        <fa-icon [icon]="faAngleDoubleDown"></fa-icon>
+      </div>
+    </a>
+    <a href="#professional-exp">
+      <div matTooltip="Professional Experience" class="icon">
+        <fa-icon [icon]="faBriefcase"></fa-icon>
+      </div>
+    </a>
+    <a href="#academic-details">
+      <div matTooltip="Academic Details" class="icon">
+        <fa-icon [icon]="faGraduationCap"></fa-icon>
+      </div>
+    </a>
+    <a href="#my-skills">
+      <div matTooltip="Skills and Tools" class="icon">
+        <fa-icon [icon]="faGem"></fa-icon>
+      </div>
+    </a>
+    <a href="#personal-projects">
+      <div matTooltip="Personal Projects" class="icon">
+        <fa-icon [icon]="faClipboardList"></fa-icon>
+      </div>
+    </a>
+    <a href="#social-profile">
+      <div matTooltip="Social Media" class="icon">
+        <fa-icon [icon]="faGithub"></fa-icon>
+      </div>
+    </a>
   </div>
 
 </section>
