--- a/src/app/professional-exp/professional-exp.component.html
+++ b/src/app/professional-exp/professional-exp.component.html
@@ -13,6 +13,9 @@
     <div class="content">
       <div class="title">Motion Graphics Designer</div>
       <div class="period">
+        <fa-icon [icon]="faBuilding"></fa-icon> Infosys Ltd
+      </div>
+      <div class="period">
         <fa-icon [icon]="faCalendar"></fa-icon> February 2016 - June 2018
       </div> <br>
       <div class="description">
@@ -39,6 +42,9 @@
     <div class="content">
       <div class="title">Web Developer</div>
       <div class="period">
+        <fa-icon [icon]="faBuilding"></fa-icon> Infosys Ltd
+      </div>
+      <div class="period">
         <fa-icon [icon]="faCalendar"></fa-icon> December 2016 - April 2018
       </div> <br>
       <div class="description">
@@ -62,6 +68,9 @@
     </div>
     <div class="content">
       <div class="title">Systems Engineer Trainee</div>
+      <div class="period">
+        <fa-icon [icon]="faBuilding"></fa-icon> Infosys Ltd
+      </div>
       <div class="period">
         <fa-icon [icon]="faCalendar"></fa-icon> September 2015 - February 2016
       </div> <br>
