--- a/src/app/professional-exp/professional-exp.component.css
+++ b/src/app/professional-exp/professional-exp.component.css
@@ -45,6 +45,10 @@ section{
     font-size: 20px;
 }
 
+.period fa-icon{
+    /* color: white; */
+}
+
 .description{
     font-size: 18px;
     line-height: 25px;
