--- a/src/app/social/social.component.css
+++ b/src/app/social/social.component.css
@@ -28,6 +28,26 @@ section{
     justify-content: center;
     align-items: center;
     border-radius: 100px;
+    box-shadow: rgba(0,0,0,0.25) 1px 1px 10px 1px;
+    transition: transform 0.5s ease;
+    will-change: transform; 
+    animation-name: beat;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes beat{
+    from{
+        transform: scale(1)
+    }
+    to{
+        transform: scale(1.05);
+    }
+}
+
+.icon-holder:hover{
+    transform: scale(1.05);
 }
 
 .icon-holder.github{
