--- a/src/app/personal-info/personal-info.component.html
+++ b/src/app/personal-info/personal-info.component.html
@@ -13,7 +13,7 @@
 
   <div class="row-2">
     <a href="#professional-exp">
-      <div matTooltip="Scroll down" [matTooltipClass]="orange" class="icon down-arrow">
+      <div matTooltip="Scroll down" class="icon down-arrow">
         <fa-icon [icon]="faAngleDoubleDown"></fa-icon>
       </div>
     </a>
