Added analytics code

--- a/src/app/professional-exp/professional-exp.component.html
+++ b/src/app/professional-exp/professional-exp.component.html
@@ -2,7 +2,7 @@
   <div class="experience">
     <div class="graphic">
       <div class="line">
-        <div class="circle" title="June 2018">
+        <div class="circle" title="Present">
 
         </div>
         <div class="circle" title="February 2016">
@@ -16,7 +16,7 @@
         <fa-icon [icon]="faBuilding"></fa-icon> Infosys Ltd
       </div>
       <div class="period">
-        <fa-icon [icon]="faCalendar"></fa-icon> February 2016 - June 2018
+        <fa-icon [icon]="faCalendar"></fa-icon> February 2016 - Present
       </div> <br>
       <div class="description">
         Designed good number of <b>Explainer and Motion Graphic videos</b> for various use cases in banking, travel and shopping
