--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -19,7 +19,7 @@
       <img class="flip" src="assets/images/sitting-dev.png" alt="Developer Image">
     </div>
 
-    <a class="no-style-anchor" href="https://pradeeprajr93.github.io/crypto-ticker/" target="_blank">
+    <a class="no-style-anchor" href="https://pradeepverse.github.io/crypto-ticker/" target="_blank">
       <div class="project">
         <div class="img-holder">
           <img src="assets/images/crypto.jpg" alt="Crypto Currencies">
@@ -39,7 +39,7 @@
             PWA
           </span>
         </div>
-        <a href="https://github.com/pradeeprajr93/crypto-ticker" target="_blank">
+        <a href="https://github.com/pradeepverse/crypto-ticker" target="_blank">
           <div class="src">
             <fa-icon [icon]="faGithub"></fa-icon>
           </div>
@@ -47,7 +47,7 @@
       </div>
     </a>
 
-    <a class="no-style-anchor" href="https://pradeeprajr93.github.io/quizzer/home" target="_blank">
+    <a class="no-style-anchor" href="https://pradeepverse.github.io/quizzer/home" target="_blank">
       <div class="project">
         <div class="img-holder">
           <img src="assets/images/quizzer.png" alt="Crypto Currencies">
@@ -67,7 +67,7 @@
             Firebase Database
           </span>
         </div>
-        <a href="https://github.com/pradeeprajr93/quizzer" target="_blank">
+        <a href="https://github.com/pradeepverse/quizzer" target="_blank">
           <div class="src">
             <fa-icon [icon]="faGithub"></fa-icon>
           </div>
@@ -75,7 +75,7 @@
       </div>
     </a>
 
-    <a class="no-style-anchor" href="https://pradeeprajr93.github.io/YTDownloader/" target="_blank">
+    <a class="no-style-anchor" href="https://pradeepverse.github.io/YTDownloader/" target="_blank">
       <div class="project">
         <div class="img-holder">
           <img src="assets/images/ytd.png" alt="Crypto Currencies">
@@ -95,7 +95,7 @@
             PWA
           </span>
         </div>
-        <a href="https://github.com/pradeeprajr93/YTDownloader" target="_blank">
+        <a href="https://github.com/pradeepverse/YTDownloader" target="_blank">
           <div class="src">
             <fa-icon [icon]="faGithub"></fa-icon>
           </div>
@@ -103,7 +103,7 @@
       </div>
     </a>
     
-    <a class="no-style-anchor" href="https://github.com/pradeeprajr93/video-proof-reader" target="_blank">
+    <a class="no-style-anchor" href="https://github.com/pradeepverse/video-proof-reader" target="_blank">
       <div class="project">
         <div class="img-holder">
           <img style="border-radius: 5px;" src="assets/images/proofread.jpg" alt="Crypto Currencies">
@@ -123,7 +123,7 @@
             JavaScript
           </span>
         </div>
-        <a href="https://github.com/pradeeprajr93/video-proof-reader" target="_blank">
+        <a href="https://github.com/pradeepverse/video-proof-reader" target="_blank">
           <div class="src">
             <fa-icon [icon]="faGithub"></fa-icon>
           </div>
