--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="my-pic">
 
-    <a class="no-style" title="GitHub" target="_blank" href="https://github.com/pradeeprajr93">
+    <a class="no-style" title="GitHub" target="_blank" href="https://github.com/pradeepverse">
       <div class="icon-holder github">
         <fa-icon [icon]="faGithub"></fa-icon>
       </div>
@@ -19,7 +19,7 @@
       </div>
     </a>
 
-    <a class="no-style" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/pradeeprajr93/">
+    <a class="no-style" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/pradeepverse/">
       <div class="icon-holder linkedin">
         <fa-icon [icon]="faLinkedin"></fa-icon>
       </div>
@@ -31,7 +31,7 @@
       </div>
     </a>
 
-    <a class="no-style" title="Medium" target="_blank" href="https://medium.com/@pradeeprajr93">
+    <a class="no-style" title="Medium" target="_blank" href="https://medium.com/@pradeepverse">
       <div class="icon-holder medium">
         <fa-icon [icon]="faMedium"></fa-icon>
       </div>
